--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -1,3 +1,16 @@
 body{
 	background-color:#c9d3fe;
 }
+
+footer{
+	margin-top: 20px;
+}
+
+#currentUser{
+	text-align:right;
+}
+
+.weatherviz{
+	border-radius:7px;
+	border: 2px solid #929093;
+}
