--- a/src/main/webapp/css/dashboard.css
+++ b/src/main/webapp/css/dashboard.css
@@ -3,13 +3,20 @@
 #dailyWeatherIcon{
 	width: 250px;
 	height: 250px;
+	margin:45px;
+}
+
+
+#weatherDetails{
+/* 	vertical-align: middle; */
+	margin-top:60px;
 }
 
 #currentUser{
 	float:right;
 	padding-right:15px;
 	font-weight:400;
-	color:white;
+	color:black;
 	letter-spacing:1px;
 }
 
@@ -18,16 +25,23 @@
 	flex-direction:row;
 	font-size: 2rem;
 	justify-content:space-evenly;
-}
-
-#dailyWeatherIcon{
 	margin:25px;
-	margin-right:50px;
+	margin-bottom:50px;
 }
 
-#dailyWeatherInfo{
-	margin:25px;
-	padding-top:25px;
-	vertical-align:middle;
+#weatherPropertiesForm{
+	margin: 25px;
+	
 }
 
+#chartTypeSelectionContainer{
+	margin: 25px;
+	margin-bottom:50px;
+}
+
+.weatherviz{
+	margin-top:25px;
+	width:100%;
+	height:500px;
+	margin-bottom:50px; 
+}
