--- a/src/main/webapp/css/dashboard.css
+++ b/src/main/webapp/css/dashboard.css
@@ -1,4 +1,7 @@
 
+h1, h2{
+	font-family: 'Montserrat', sans-serif;
+}
 
 #dailyWeatherIcon{
 	width: 250px;
@@ -29,6 +32,16 @@
 	margin-bottom:50px;
 }
 
+.currentConditionsCard {
+	/*border: solid black;*/
+	border-radius:15px;
+	background:rgb(255, 255, 255,.2); */
+	padding:5px;
+}
+
+.card h1{
+	margin-top:10px;
+}
 
 
 #weatherPropertiesForm{
