--- a/src/main/webapp/css/homepage.css
+++ b/src/main/webapp/css/homepage.css
@@ -5,3 +5,13 @@
 	color:black;
 	letter-spacing:1px;
 }
+
+#historicalDateSearch{
+	margin-top:25px;
+	margin-bottom:25px;
+
+}
+
+.btn{
+	margin-top:25px;
+}
