--- a/src/main/webapp/css/homepage.css
+++ b/src/main/webapp/css/homepage.css
@@ -7,11 +7,25 @@
 }
 
 #historicalDateSearch{
-	margin-top:25px;
-	margin-bottom:25px;
+	margin-left:15px;
+
 
 }
 
+.row{
+	margin-top:10px;
+	margin-bottom:10px;
+}
+
+#yesNoHistorical{
+	margin-left:30px;
+}
+
 .btn{
-	margin-top:25px;
+	
+	margin-left:60px
+}
+
+h1, h2{
+	font-family: 'Montserrat', sans-serif;
 }
