--- a/src/main/webapp/css/dashboard.css
+++ b/src/main/webapp/css/dashboard.css
@@ -79,6 +79,7 @@ h1, h2{
 }
 
 #liveRadar {
-	border:15px solid #adc3ce;
+	border:15px solid;
+	border-color:rgb(255, 255, 255,.2);
 	border-radius:15px;
 }
