--- a/src/main/webapp/css/homepage.css
+++ b/src/main/webapp/css/homepage.css
@@ -36,3 +36,9 @@ h1, h2{
 	height:500px;
 	margin-bottom:50px; 
 }
+
+#forecastChart {
+	border-radius:15px;
+	background:rgb(255, 255, 255,.2); 
+	padding:5px;
+}
